[package]
name = "cpu_emu"
version = "0.1.0"
authors = ["myxo <klimov.ns@mail.ru>"]
edition = "2021"


[dependencies]
#asm6502 = "0.1.2"
asm6502 = { git = "https://github.com/myxo/asm6502", branch = "lables"}
assert = "0.0.4"
lazy_static = "1.4.0"
sdl2 = "0.35"
httparse = "1.7.1"
http = "0.2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
