[package]
name = "cpu_emu"
version = "0.1.0"
authors = ["myxo <klimov.ns@mail.ru>"]
edition = "2021"
default-run = "cpu_emu"

[[bin]]
name = "cpu_emu"
path = "src/main.rs"

[[bin]]
name = "debugger_client"
path = "src/debugger_client.rs"

#[dependencies]
#[target.'cfg(target_arch = "x86_64")'.dependencies]
[target.'cfg(not(target_family = "wasm"))'.dependencies]
#asm6502 = "0.1.2"
asm6502 = { git = "https://github.com/bgourlie/asm6502", branch = "master"}
assert = "0.0.4"
lazy_static = "1.4.0"
sdl2 = "0.35"
httparse = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
fern = "0.6"
chrono = "0.4"

[target.wasm32-unknown-unknown.dependencies]
serde = { version = "1.0", features = ["derive"] }
yew = "0.19"
reqwasm = "0.2"
wasm-bindgen-futures = "0.4"
